<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BattleActivity">


    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_11"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/button11"
                android:background="#ffff4444"/>
            <Button
                android:id="@+id/button_12"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/button12"
                android:background="#57FF44"/>
            <Button
                android:id="@+id/button_13"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/button13"
                android:background="#57FF44"/>
            <Button
                android:id="@+id/button_14"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="(1,4)"
                android:background="#44D3FF"/>
            <Button
                android:id="@+id/button_15"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="(1,5)"
                android:background="#44D3FF"/>
        </TableRow>

        <!-- 2行目 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_21"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/button21"
                android:background="#44D3FF"/>
            <Button
                android:id="@+id/button_22"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/button22"
                android:background="#ffff4444"/>
            <Button
                android:id="@+id/button_23"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/button23"
                android:background="#44D3FF"/>
            <Button
                android:id="@+id/button_24"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="(2.4)"
                android:background="#44D3FF"/>
            <Button
                android:id="@+id/button_25"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="(2,5)"
                android:background="#57FF44"/>
        </TableRow>

        <!-- 3行目 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_31"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/button31"
                android:background="#44D3FF"/>
            <Button
                android:id="@+id/button_32"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/button32"
                android:background="#57FF44"/>
            <Button
                android:id="@+id/button_33"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/button33"
                android:background="#ffff4444"/>
            <Button
                android:id="@+id/button_34"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="(3,4)"
                android:background="#44D3FF"/>
            <Button
                android:id="@+id/button_35"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="(3,5)"
                android:background="#57FF44"/>
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_41"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="(4,1)"
                android:background="#44D3FF"/>
            <Button
                android:id="@+id/button_42"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="(4,2)"
                android:background="#44D3FF"/>
            <Button
                android:id="@+id/button_43"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="(4,3)"
                android:background="#44D3FF"/>
            <Button
                android:id="@+id/button_44"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="(4.4)"
                android:background="#57FF44"/>
            <Button
                android:id="@+id/button_45"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="(4,5)"
                android:background="#44D3FF"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_51"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="(5,1)"
                android:background="#44D3FF"/>
            <Button
                android:id="@+id/button_52"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="(5,2)"
                android:background="#ffff4444"/>
            <Button
                android:id="@+id/button_53"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="(5,3)"
                android:background="#44D3FF"/>
            <Button
                android:id="@+id/button_54"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="(5.4)"
                android:background="#44D3FF"/>
            <Button
                android:id="@+id/button_55"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="(5,5)"
                android:background="#57FF44"/>
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_61"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="(6,1)"
                android:background="#44D3FF"/>
            <Button
                android:id="@+id/button_62"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="(6,2)"
                android:background="#ffff4444"/>
            <Button
                android:id="@+id/button_63"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="(6,3)"
                android:background="#57FF44"/>
            <Button
                android:id="@+id/button_64"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="(6.4)"
                android:background="#44D3FF"/>
            <Button
                android:id="@+id/button_65"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="(6,5)"
                android:background="#57FF44"/>
        </TableRow>

        <Button
            android:id="@+id/btn_pushme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fire" />
    </TableLayout>
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Go Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="341dp"></Button>

</android.support.constraint.ConstraintLayout>